system number modifed

--- a/system/system11.html
+++ b/system/system11.html
@@ -7,17 +7,25 @@
     <title>System_Spec</title>
 </head>
 <body>
+    <div class= main-box>
+        <div class=home-box>
+            <button class=home_button onclick="location.href='http://127.0.0.1:5500/index.html'">HOME</button>
+
+        </div>
+        
+     <div class=systembox> 
+        <p>
+            <h1 id=sysno>SYSTEM NUMBER</h1>
+            <h2 id="sys2">SYSTEM-011</h2>
+                <p id="para">Cerium_Number  : CER-KOC-LT-062 <br>
+                Network_type   : LAN <br>
+                Network_Status : Ok <br>
+                System_Type    : Laptop <br>
+                Remarks :
+                </p>       
+        </p>
+    </div>
+    </div>
     <link rel="stylesheet" href="homebutton.css">
-    <button class=home_button onclick="location.href='http://127.0.0.1:5500/index.html'">HOME</button>
-    <p>
-        <h1>System_Number</h1>
-        <h2>system-011</h2>
-        Cerium_Number  : CER-KOC-AIO-068 <br>
-        Network_type   : LAN <br>
-        Network_Status : ok <br>
-        System_Type    : ALL IN ONE <br>
-        Remarks        :
-    </p>
-    
 </body>
 </html>
